Fix footer not aligned to bottom for small articles

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,6 +1,13 @@
 // Copyright (c) Microsoft. All rights reserved.
 // Licensed under the MIT license. See LICENSE file in the project root for full license information.
 
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
 .sticky-top {
   position: sticky;
   top: 0;
